From 817f6a7 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Modify member function FT() of class ClosurePhaseDelaySpectrum
to compute delay spectrum of subtract model and residuals.

From 0cf9822 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Add member function subtract() along with docstring under class
ClosurePhase. Update class docstring accordingly

From 8668be2 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function save() of class ClosurePhase, fix bug by
adding self as the first argument for the function inputs.

From da67b42 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, fix bug in removal of entries in
diagoffsets when avgcov is applied

From 1ce14c6 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, fix bug in the boolean interpretation of
when avgcov is to be applied or not

From 7970b83 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, make major updates to docstring to match
description of input and output correctly

From ba6b657 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function FT() of class ClosurePhaseDelaySpectrum,
add keyword input visscaleinfo to scale the closure phase Fourier
transform by the visibility to get the result in units of the
visibility. Process visscaleinfo appropriately. Update member
function docstring accordingly

From 8e46be9 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, remove commented lines, and obsolete